# zBitCompressor.rs

./: .gitignore  AGENTS.md  LICENSE  OPENCLAW.md  README.md  ROADMAP.md  zbit_algorithm_structure.md
papers/: zbit-algorithmsResearch.md
zbit-rs/: Cargo.toml  README.md  benchmark_cat_challenge_latest.txt  benchmark_cat_challenge_stream_latest.txt  benchmark_cat_challenge_stream_multilevel_latest.txt  benchmark_latest.txt  benchmark_primary.3b_latest.txt  setup.md
zbit-rs/scripts/: benchmark_cat_challenge.sh  benchmark_cat_challenge_stream.sh  benchmark_cat_challenge_stream_multilevel.sh
zbit-rs/src/: advanced.rs  circuit.rs  error.rs  file_format.rs  lib.rs  main.rs  minimizer.rs  model.rs  pack.rs  pack_rules.rs  sat.rs  utils.rs
zbit-rs/src/pack/: codecs.rs  core.rs  format.rs  mod.rs  recursive.rs  stream.rs  tests.rs  transforms.rs
zbit-rs/tests/: advanced_validation.rs  cat_challenge_benchmark.rs  cat_challenge_stream_benchmark.rs  cat_challenge_stream_multilevel_benchmark.rs  model_validation.rs  real_file_benchmark.rs  stream_real_file_benchmark.rs
