[package]
name = "zbit-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "zbit_rs"
path = "src/lib.rs"

[[bin]]
name = "zbit-rs"
path = "src/main.rs"

[[bin]]
name = "zbit-benchmark"
path = "src/bin/benchmark_real_file.rs"

[[bin]]
name = "zbit-benchmark-stream"
path = "src/bin/benchmark_stream_real_file.rs"

[dependencies]
flate2 = "1.1"
zstd = "0.13"
crc32fast = "1.5"
preflate-rs = { path = "../vendor/preflate-rs" }
xz2 = "0.1"
